--- a/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Manage/Content/_assets/scss/modules/_vacancy.scss
@@ -9,6 +9,9 @@
     .locations-positions-header{
         text-align: center;
     }
+    tbody tr{
+        height: 78px;
+    }
 }
 
 .location-search-results{
