--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -26,6 +26,9 @@
     .locations-positions-header{
         text-align: center;
     }
+    tbody tr{
+        height: 78px;
+    }
 }
 
 .editable-item {
