Honoring WageUnit in FAA

--- a/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
+++ b/src/SFA.Apprenticeships.Web.Candidate/Views/ApprenticeshipSearch/Details.cshtml
@@ -62,7 +62,7 @@
             <h2 class="heading-large">Apprenticeship summary</h2>
             <div class="grid grid-1-3">
                 <div class="inner-block-padr">
-                    <h3 class="bold-small">Weekly wage</h3>
+                    <h3 class="bold-small">@Model.WageUnit.GetHeaderDisplayText()</h3>
                     <p id="vacancy-wage">@Model.Wage</p>
 
                     <h3 class="bold-small">Working week</h3>
