--- a/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
+++ b/src/SFA.Apprenticeships.Web.Recruit/Content/_assets/scss/modules/_vacancy.scss
@@ -150,6 +150,9 @@ h2{
                     }
                 }
             }
+            figcaption.underline {
+                text-decoration: underline;
+            }
         }
     }
 }
