--- a/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/ProviderUser/Home.cshtml
@@ -135,7 +135,7 @@
                 <li><figure class="data">
                     <a href="@Url.RouteUrl(RecruitmentRouteNames.RecruitmentHome, new VacanciesSummarySearchViewModel(Model.VacanciesSummary.VacanciesSummarySearch, !showAllLotteryNumbers))" class="vacancy-filter">
                         <p class="count">&nbsp;</p>
-                        <figcaption>
+                        <figcaption class="underline">
                             @if (showAllLotteryNumbers)
                             {
                                 <h2>Show less...</h2>
