--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Locations.cshtml
@@ -245,18 +245,7 @@
                 @Html.EditorFor(m => m.AdditionalLocationInformationComment, "Comment", Html.GetLabelFor(m => m.AdditionalLocationInformationComment))
             </div>
             <button type="submit" class="button" name="AddLocations" value="Locations">@saveButtonText</button>
-            @Html.RouteLink("Use employer's address", ManagementRouteNames.EmployerInformation, new { vacancyReferenceNumber = Model.VacancyReferenceNumber, useEmployerLocation = true })
-            @{
-                if (comeFromConfirmEmployer == true)
-                {
-                    var address = Request.UrlReferrer.PathAndQuery;
-                    <a href="@address" class="cancel-link">Cancel</a>
-                }
-                else if (Model.ComeFromPreview && Model.Addresses != null && Model.Addresses.Any())
-                {
-                    @Html.RouteLink("Cancel", ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber }, new { @class = "cancel-link" })
-                }
-            }
+            @Html.RouteLink("Return to previous page", ManagementRouteNames.EmployerInformation, new { vacancyReferenceNumber = Model.VacancyReferenceNumber, useEmployerLocation = true })
         </div>
     </div>
 
