--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/Locations.cshtml
@@ -166,7 +166,7 @@
                     @Html.Partial("_comment", Html.GetCommentViewModel(m => m.AdditionalLocationInformationComment))
                 </div>
                 <button type="submit" class="button" name="AddLocations" value="Locations">@saveButtonText</button>
-                @Html.RouteLink("Use employer's address", RecruitmentRouteNames.ComfirmEmployer, new { providerSiteErn = Model.ProviderSiteErn, ern = Model.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true})
+                @Html.RouteLink("Return to previous page", RecruitmentRouteNames.ComfirmEmployer, new { providerSiteErn = Model.ProviderSiteErn, ern = Model.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true})
             }
         </div>
     </noscript>
@@ -239,7 +239,7 @@
                 @Html.Partial("_comment", Html.GetCommentViewModel(m => m.AdditionalLocationInformationComment))
             </div>
             <button type="submit" class="button" name="AddLocations" value="Locations">@saveButtonText</button>
-            @Html.RouteLink("Use employer's address", RecruitmentRouteNames.ComfirmEmployer, new { providerSiteErn = Model.ProviderSiteErn, ern = Model.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true})
+            @Html.RouteLink("Return to previous page", RecruitmentRouteNames.ComfirmEmployer, new { providerSiteErn = Model.ProviderSiteErn, ern = Model.Ern, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview, useEmployerLocation = true})
         </div>
     </div>
 }
