Shared basic vacancy details view

--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_ValidationResultIcons.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/_ValidationResultIcons.cshtml
@@ -14,4 +14,4 @@
     }
 }
 
-@Html.Partial(CommentViewModel.PartialView, Model.CommentViewModel)
+@Html.Partial(CommentViewModel.PartialIconView, Model.CommentViewModel)
