--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_ValidationResultIcons.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/_ValidationResultIcons.cshtml
@@ -10,4 +10,4 @@
     }
 }
 
-@Html.Partial(CommentViewModel.PartialView, Model.CommentViewModel)
+@Html.Partial(CommentViewModel.PartialIconView, Model.CommentViewModel)
