--- a/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Questions.cshtml
+++ b/src/SFA.Apprenticeships.Web.Manage/Views/Vacancy/Questions.cshtml
@@ -1,29 +1,11 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy.VacancyQuestionsViewModel
+﻿@model VacancyQuestionsViewModel
 @using SFA.Apprenticeships.Web.Manage.Constants
-@using SFA.Apprenticeships.Web.Raa.Common.Extensions
-@{
-    ViewBag.Title = "Recruit an Apprentice - Enter vacancy question";
-}
-
-<h1 class="heading-xlarge">
-    Questions for candidates
-</h1>
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Vacancy
 
 @using (Html.BeginRouteForm(ManagementRouteNames.Questions, FormMethod.Post))
 {
-    @Html.AntiForgeryToken()
-    @Html.Partial("ValidationSummary", ViewData.ModelState)
+    @Html.DisplayFor(m => m, VacancyQuestionsViewModel.PartialView)
 
-    @Html.HiddenFor(m => m.VacancyReferenceNumber)
-
-    <section>
-        <div class="form-group">
-            @Html.FormTextAreaFor(m => m.FirstQuestion, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
-            @Html.EditorFor(m => m.FirstQuestionComment, "Comment", Html.GetLabelFor(m => m.FirstQuestionComment))
-            @Html.FormTextAreaFor(m => m.SecondQuestion, controlHtmlAttributes: new { @class = "width-all-1-1 form-textarea-medium", type = "text" })
-            @Html.EditorFor(m => m.SecondQuestionComment, "Comment", Html.GetLabelFor(m => m.SecondQuestionComment))
-        </div>
-    </section>
     <div class="grid grid-1-2">
         <button type="submit" class="button">Save</button>
         @Html.RouteLink("Cancel", ManagementRouteNames.ReviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
