--- a/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
+++ b/src/SFA.Apprenticeships.Web.Recruit/Views/VacancyPosting/ConfirmEmployer.cshtml
@@ -1,14 +1,13 @@
-﻿@model SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider.ProviderSiteEmployerLinkViewModel
+﻿@model ProviderSiteEmployerLinkViewModel
 @using System.Web.Mvc.Html
-@using SFA.Apprenticeships.Web.Common.Extensions
 @using SFA.Apprenticeships.Domain.Entities.Vacancies.ProviderVacancies
-@using SFA.Apprenticeships.Web.Raa.Common.Extensions
+@using SFA.Apprenticeships.Web.Raa.Common.ViewModels.Provider
 @using SFA.Apprenticeships.Web.Recruit.Constants
 
 @{
     ViewBag.Title = "Recruit an Apprentice - Check employer information";
 
-    var saveButtonText = (Model.Status == ProviderVacancyStatuses.RejectedByQA || Model.ComeFromPreview) && 
+    var saveButtonText = (Model.Status == ProviderVacancyStatuses.RejectedByQA || Model.ComeFromPreview) &&
         Model.IsEmployerLocationMainApprenticeshipLocation.HasValue &&
         Model.IsEmployerLocationMainApprenticeshipLocation.Value == true ? "Save and return to Preview" : "Save and continue";
 }
@@ -20,56 +19,20 @@
         </h1>
     </div>
 </div>
-<div class="grid-wrapper">
-    @using (Html.BeginRouteForm(RecruitmentRouteNames.ComfirmEmployer, FormMethod.Post))
-    {   
-        @Html.Partial("ValidationSummary", ViewData.ModelState)
 
-        @Html.HiddenFor(m => m.ProviderSiteErn)
-        @Html.HiddenFor(m => m.Employer.Ern)
-        @Html.HiddenFor(m => m.VacancyGuid)
-        @Html.HiddenFor(m => m.VacancyReferenceNumber)
-        @Html.HiddenFor(m => m.ComeFromPreview)
+@using (Html.BeginRouteForm(RecruitmentRouteNames.ComfirmEmployer, FormMethod.Post))
+{
+    @Html.DisplayFor(m => m, ProviderSiteEmployerLinkViewModel.PartialView)
 
-        <div class="grid grid-1-2">
-            <div class="inner-block-padr">
-                <h3 class="bold-small">Employer</h3>
-                <p class="small-btm-margin">@Model.Employer.Name</p>
-                <h3 class="bold-small">Address</h3>
-                <p class="small-btm-margin">@Model.Employer.Address.AddressLine1</p>
-                <p class="small-btm-margin">@Model.Employer.Address.AddressLine2</p>
-                <p class="small-btm-margin">@Model.Employer.Address.AddressLine3</p>
-                <p class="small-btm-margin">@Model.Employer.Address.AddressLine4</p>
-                <p class="small-btm-margin">@Model.Employer.Address.Postcode</p>
-            </div>
-        </div>
-        <div class="grid grid-1-2 hide-print">
-            <div class="ad-details__map">
-                <div class="map-overlay" onClick="style.pointerEvents = 'none'"></div>
-                <iframe width="700" height="250" frameborder="0" style="border: 0" src="https://www.google.com/maps/embed/v1/place?q=@Model.Employer.Address.Postcode,+United+Kingdom&key=AIzaSyCusA_0x4bJEjU-_gLOFiXMSBXKZYtvHz8"></iframe>
-                <p class="nojs-notice">You must have JavaScript enabled to view a map of the location</p>
-            </div>
-        </div>
-
-        <div class="grid grid-1-1">
-            @{Html.RenderPartial("_apprenticeshipLocationSelectorJS", Model);}
-            @{Html.RenderPartial("_apprenticeshipLocationSelectorNonJS", Model);}
-        </div>
-
-        <div class="grid grid-1-1">
-            @Html.FormTextFor(model => model.WebsiteUrl, controlHtmlAttributes: new {type = "text", @class = "form-control-1-1"}, labelHtmlAttributes: new {@class = "bold-small"})
-            @Html.Partial("_comment", Html.GetCommentViewModel(m => m.WebsiteUrlComment))
-            @Html.FormTextAreaFor(m => m.Description, controlHtmlAttributes: new {@class = "width-all-1-1", type = "text", size = 12, style = "height: 200px;"}, labelHtmlAttributes: new {@class = "bold-small"})
-            @Html.Partial("_comment", Html.GetCommentViewModel(m => m.DescriptionComment))
-            <button class="button" id="confirmEmployer" name="ConfirmEmployer" value="ConfirmEmployer">@saveButtonText</button>
-            @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteErn = Model.ProviderSiteErn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview}, new {@class = "button-link"})
-            @if (Model.ComeFromPreview)
-            {
-                @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
-            }
-        </div>
-   }
-</div>
+    <div class="grid grid-1-1">
+        <button class="button" id="confirmEmployer" name="ConfirmEmployer" value="ConfirmEmployer">@saveButtonText</button>
+        @Html.RouteLink("Choose a different employer", RecruitmentRouteNames.SelectExistingEmployer, new { providerSiteErn = Model.ProviderSiteErn, vacancyGuid = Model.VacancyGuid, comeFromPreview = Model.ComeFromPreview }, new { @class = "button-link" })
+        @if (Model.ComeFromPreview)
+        {
+            @Html.RouteLink("Cancel", RecruitmentRouteNames.PreviewVacancy, new { vacancyReferenceNumber = Model.VacancyReferenceNumber })
+        }
+    </div>
+}
 
 @section scripts {
     <script type="text/javascript">
